apply plugin: 'java-library'
apply plugin: 'maven-publish'

repositories {
}

// Primary dependencies definition
dependencies {
    api group: 'javax.inject', name: 'javax.inject', version: '1'
    implementation "org.slf4j:slf4j-api:$slf4j_version"
    implementation "com.google.guava:guava:$guava_version"
}

sourceCompatibility = 1.8
targetCompatibility = 1.8
